--- a/catch-emoji-game.html
+++ b/catch-emoji-game.html
@@ -91,119 +91,4 @@
 <div id="gameOver">
     💀 Game Over!<br>
     <p id="finalScore"></p>
-    <button onclick="restartGame()">Restart</button>
-</div>
-
-<!-- Audio -->
-<audio id="clickSound" src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_3f9b0d94b6.mp3?filename=pop-39222.mp3"></audio>
-<audio id="missSound" src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_d65bc74c71.mp3?filename=negative_beeps-6008.mp3"></audio>
-
-<script>
-    let score = 0;
-    let lives = 3;
-    let gameActive = false;
-    let gameInterval;
-
-    const clickSound = document.getElementById("clickSound");
-    const missSound = document.getElementById("missSound");
-
-    document.getElementById("startScreen").style.display = "block";
-
-    function startGame() {
-        // Fullscreen mode
-        if (document.documentElement.requestFullscreen) {
-            document.documentElement.requestFullscreen();
-        }
-
-        // Unlock audio (browser policy)
-        clickSound.play().then(() => { clickSound.pause(); clickSound.currentTime = 0; });
-        missSound.play().then(() => { missSound.pause(); missSound.currentTime = 0; });
-
-        score = 0;
-        lives = 3;
-        gameActive = true;
-        document.getElementById("score").textContent = "Score: " + score;
-        document.getElementById("lives").textContent = "Lives: " + lives + " ❤️";
-        document.getElementById("startScreen").style.display = "none";
-        document.getElementById("gameOver").style.display = "none";
-
-        gameInterval = setInterval(spawnEmoji, 800);
-    }
-
-    function spawnEmoji() {
-        if (!gameActive) return;
-
-        const emojiList = ["🍕", "🍔", "🍟", "🍩", "🍎", "🍌", "🍓", "🪙", "💎", "⭐", "⚽"];
-        const emoji = document.createElement("div");
-        emoji.classList.add("emoji");
-        emoji.textContent = emojiList[Math.floor(Math.random() * emojiList.length)];
-        
-        emoji.style.left = Math.random() * (window.innerWidth - 50) + "px";
-        
-        document.body.appendChild(emoji);
-
-        let clicked = false;
-
-        emoji.addEventListener("click", () => {
-            clicked = true;
-            score++;
-            clickSound.currentTime = 0;
-            clickSound.play();
-            document.getElementById("score").textContent = "Score: " + score;
-            emoji.classList.add("pop");
-            setTimeout(() => emoji.remove(), 300);
-        });
-
-        setTimeout(() => {
-            if (!clicked && gameActive) {
-                lives--;
-                missSound.currentTime = 0;
-                missSound.play();
-                document.getElementById("lives").textContent = "Lives: " + lives + " ❤️";
-                if (lives <= 0) {
-                    gameOver();
-                }
-            }
-            emoji.remove();
-        }, 4000);
-    }
-
-    function gameOver() {
-        gameActive = false;
-        clearInterval(gameInterval);
-        document.getElementById("finalScore").textContent = "Your Score: " + score;
-        document.getElementById("gameOver").style.display = "block";
-    }
-
-    function restartGame() {
-        startGame();
-    }
-
-    // Aurora Background Animation
-    const canvas = document.getElementById("bgCanvas");
-    const ctx = canvas.getContext("2d");
-
-    let w, h;
-    function resizeCanvas() {
-        w = canvas.width = window.innerWidth;
-        h = canvas.height = window.innerHeight;
-    }
-    window.addEventListener("resize", resizeCanvas);
-    resizeCanvas();
-
-    let gradientShift = 0;
-    function drawAurora() {
-        gradientShift += 0.002;
-        let gradient = ctx.createLinearGradient(0, 0, w, h);
-        gradient.addColorStop(0, `hsl(${(gradientShift*200)%360}, 80%, 50%)`);
-        gradient.addColorStop(0.5, `hsl(${(gradientShift*200+60)%360}, 80%, 50%)`);
-        gradient.addColorStop(1, `hsl(${(gradientShift*200+120)%360}, 80%, 50%)`);
-        ctx.fillStyle = gradient;
-        ctx.fillRect(0, 0, w, h);
-        requestAnimationFrame(drawAurora);
-    }
-    drawAurora();
-</script>
-
-</body>
-</html>
+    <button onclick="restartGame()">Res
